# keygrep

./: .gitignore  .pylintrc  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  __init__.py  keychain.py  keygrep_utility.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/keygrep/: __init__.py  cli.py  keychain.py  keygrep_utility.py  types.py
tests/: download-test-keys.sh  generate-test-keys.sh  mangle-test-keys.sh  test_keygrep.py
tests/test-keys/: README.md  doubled_header  multiple_keys  multiple_keys.pub  recoverable_ed25519_1  rsa_1_binary_comment  rsa_1_binary_comment.pub  rsa_1_invalid_unicode_comment  rsa_1_invalid_unicode_comment.pub  viminfo
tests/test-keys/bad-keys/: ed25519_2A.pub  ed25519_2B.pub
