[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "keygrep"
version = "0.0.1"
description = "Red team ssh key discovery utility"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
authors = [
    { name = "Adam Reiser", email = "reiser@defensivecomputing.io" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
]
dependencies = [
]

[project.scripts]
keygrep = "keygrep.cli:main"

[project.urls]
"Homepage" = "https://github.com/cisco-open/keygrep"
"Bug Tracker" = "https://github.com/cisco-open/keygrep/issues"
