[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "keygrep"
version = "0.0.2"
description = "Red team ssh key discovery utility"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE"]
authors = [
    { name = "Adam Reiser", email = "reiser@defensivecomputing.io" }
]
classifiers = [
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Text Processing",
]

dependencies = [
]

[project.scripts]
keygrep = "keygrep.cli:main"

[project.urls]
"Homepage" = "https://github.com/cisco-open/keygrep"
"Bug Tracker" = "https://github.com/cisco-open/keygrep/issues"
